# raylib_quake_controller

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_web.bat  build_web.sh
include/: dynamic_array.h  easing.h  raygui.h  rlights.h  viewport_rect.h
resources/: lighting.fs
resources/glb/: animated_cube.blend  animated_cube.blend1  animated_cube.glb  bone_chain.blend  bone_chain.glb
resources/shaders/: fog.fs  skinning_light.fs  skinning_light.vs  skinning_v100.fs  skinning_v100.vs
src/: app_boot.c  app_state.c  app_state.h  camera.c  camera.h  character.c  character.h  core_3d_fps_camera.c  debug_draw.c  debug_draw.h  demo_room.c  input.c  input.h  main.c  music.c  music.h  ode_util.h  physics_ode.c  physics_ode.h  scene.c  scene.h  sounds.c  sounds.h
src/assets/: assets.c  assets.h
src/models/: models.c  models.h  rlModels.c  rlModels.h  rlModels_IO.c  rlModels_IO.h
src/physics/: physics.h  physics_create.c  physics_create.h  physics_ode.c  physics_ode.h
src/scene/: scene.c  scene.h  scene_create.c  scene_create.h
src/shaders/: shaders.c  shaders.h
